<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ripple_start"
    tools:context="in.tbuddy.tbuddy.profileinfo">

    <EditText
        android:id="@+id/in_name"
        android:layout_width="320dp"
        android:layout_height="42dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/stroke_text"
        android:drawableStart="@drawable/account_circle_black"
        android:ems="10"
        android:fontFamily="sans-serif-condensed"
        android:hint="@string/stud_name"
        android:inputType="textPersonName|textCapWords"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        android:singleLine="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.353" />

    <EditText
        android:id="@+id/in_num"
        android:layout_width="320dp"
        android:layout_height="42dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/stroke_text"
        android:drawableStart="@drawable/call_black"
        android:ems="10"
        android:fontFamily="sans-serif-condensed"
        android:hint="@string/stud_num"
        android:inputType="phone"
        android:maxLength="10"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        android:singleLine="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/in_email"
        app:layout_constraintVertical_bias="0.117" />

    <EditText
        android:id="@+id/in_email"
        android:layout_width="320dp"
        android:layout_height="42dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/stroke_text"
        android:drawableStart="@drawable/email"
        android:ems="10"
        android:fontFamily="sans-serif-condensed"
        android:hint="@string/stud_mail"
        android:inputType="textEmailAddress"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        android:singleLine="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <EditText
        android:id="@+id/in_pass"
        android:layout_width="320dp"
        android:layout_height="42dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/stroke_text"
        android:drawableStart="@drawable/lock_outline_black"
        android:ems="10"
        android:fontFamily="sans-serif-condensed"
        android:hint="@string/stud_pass"
        android:inputType="textPassword"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        android:singleLine="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/in_email"
        app:layout_constraintVertical_bias="0.492" />

    <ImageView
        android:id="@+id/small_logo_1"
        android:layout_width="73dp"
        android:layout_height="69dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/slogo"
        app:layout_constraintBottom_toTopOf="@+id/in_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/nvector" />

    <ImageButton
        android:id="@+id/from_profile_info"
        android:layout_width="59dp"
        android:layout_height="54dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/ripple_round_b"
        android:contentDescription="@string/round_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/in_pass"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/round_but_arrow" />

</android.support.constraint.ConstraintLayout>
